--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <script type="text/javascript" src="system.js"></script>
 <title>SAVE POINT</title>
 </head>
-  <body bgcolor="6f6f6f">
-  	<div class="savepoint" onclick="startDisplay()">
+  <body bgcolor="6f6f6f"  onclick="startDisplay()">
+  	<div class="savepoint">
   		<img src="img/savepoint.gif" id="save" >
   	</div>
-  	<div id=parentdisplay>
-  		<div id=displaybox>aaaaaaa</div>
+  	<div id="parentdisplay">
+  		<div id="displaybox"><pre id="charsarea"></pre></div>
   	</div>
   </body>
 </html>
