--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="style.css">
 <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="wa.js"></script>
 <script type="text/javascript" src="system.js"></script>
 <title>SAVE POINT</title>
 </head>
