--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
 <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="wa.js"></script>
 <script type="text/javascript" src="system.js"></script>
+<script type="text/javascript">
+  /* ピッチインピッチアウトによる拡大縮小を禁止 */
+  document.documentElement.addEventListener('touchstart', function (e) {
+  if (e.touches.length >= 2) {e.preventDefault();}
+  }, false);
+/* ダブルタップによる拡大を禁止 */
+var t = 0;
+  document.documentElement.addEventListener('touchend', function (e) {
+  var now = new Date().getTime();
+  if ((now - t) < 350){
+    e.preventDefault();
+  }
+  t = now;
+  }, false);
+
+</script>
 <title>SAVE POINT</title>
 </head>
   <body bgcolor="6f6f6f"  onclick="startDisplay()">
