--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </script>
 <title>SAVE POINT</title>
 </head>
-  <body bgcolor="6f6f6f"  onclick="startDisplay()">
+  <body bgcolor="6f6f6f">
   	<div class="savepoint">
   		<img src="img/savepoint.gif" id="save" >
   	</div>
